Adding Swyger Storage JS Client

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,7 +24,7 @@ jobs:
           cache: 'npm'
       - name: Install dependencies and build 🔧
         run: npm ci && npm run build
-      - name: swyger-spa
+      - name: swyger-browser
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
